Docs: corregida info del update site SRI en AGENTS.md y README.md enfocado en la importancia del proyecto